<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgv_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:overScrollMode="never"
            android:scrollIndicators="none"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">


                <ImageView
                    android:id="@+id/imgv_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_200sdp"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/_20sdp"
                    android:src="@drawable/logo_login" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_20sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/get_moving_with_us"
                        android:textColor="@color/white_font"
                        android:textSize="@dimen/_20sdp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_20sdp" />

                    <EditText
                        android:textCursorDrawable="@drawable/drawable_cursor_white"
                        android:textColorHint="@color/white_font"
                        android:inputType="textEmailAddress"
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/hint_enter_email"
                        android:paddingTop="@dimen/_2sdp"
                        android:paddingBottom="@dimen/_2sdp"
                        android:textColor="@color/white_font"
                        android:textSize="@dimen/edt_txt" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:background="@color/white_line" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_20sdp" />

                    <TextView
                        android:id="@+id/txt_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/drawable_round_corner_red"
                        android:gravity="center"
                        android:padding="@dimen/_9sdp"
                        android:text="@string/login"
                        android:textColor="@color/white_font"
                        android:textSize="@dimen/txt_btn" />

                    <View

                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_20sdp" />

                    <TextView
                        android:id="@+id/txt_withot_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/drawable_round_corner_line_white"
                        android:gravity="center"
                        android:padding="@dimen/_9sdp"
                        android:text="@string/continue_without_login"
                        android:textColor="@color/white_font"
                        android:textSize="@dimen/txt_btn" />
                    <View

                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_20sdp" />
                </LinearLayout>


            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</LinearLayout>